--- a/composer.json
+++ b/composer.json
@@ -27,5 +27,10 @@
             "*": "dist"
         },
         "sort-packages": true
+    },
+    "extra": {
+        "branch-alias": {
+            "dev-main": "2.0.x-dev"
+        }
     }
 }
