--- a/composer.json
+++ b/composer.json
@@ -3,10 +3,10 @@
     "description": "Wraps my preferred PHPCSFixer config into a class for easier reuse.",
     "license": "MIT",
     "require": {
-        "php": ">=8.1",
-        "friendsofphp/php-cs-fixer": "^3"
+        "php": ">=8.1"
     },
     "require-dev": {
+        "friendsofphp/php-cs-fixer": "^3",
         "phpunit/phpunit": "^9.5",
         "roave/security-advisories": "dev-latest",
         "vimeo/psalm": "^4.7"
