--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
         "php": ">=8.1"
     },
     "require-dev": {
+        "ergebnis/composer-normalize": "^2.15",
         "friendsofphp/php-cs-fixer": "^3",
         "phpunit/phpunit": "^9.5",
         "roave/security-advisories": "dev-latest",
@@ -22,6 +23,9 @@
         }
     },
     "config": {
+        "allow-plugins": {
+            "ergebnis/composer-normalize": true
+        },
         "lock": false,
         "preferred-install": {
             "*": "dist"
