--- a/composer.json
+++ b/composer.json
@@ -6,11 +6,8 @@
         "php": ">=8.1"
     },
     "require-dev": {
-        "ergebnis/composer-normalize": "^2.15",
-        "friendsofphp/php-cs-fixer": "^3.12",
-        "phpunit/phpunit": "^9.5",
-        "roave/security-advisories": "dev-latest",
-        "vimeo/psalm": "^4.7"
+        "nayleen/development-dependencies": "^3",
+        "roave/security-advisories": "dev-latest"
     },
     "autoload": {
         "psr-4": {
@@ -24,17 +21,13 @@
     },
     "config": {
         "allow-plugins": {
-            "ergebnis/composer-normalize": true
+            "ergebnis/composer-normalize": true,
+            "phpstan/extension-installer": true
         },
         "lock": false,
         "preferred-install": {
             "*": "dist"
         },
         "sort-packages": true
-    },
-    "extra": {
-        "branch-alias": {
-            "dev-main": "2.1.x-dev"
-        }
     }
 }
