fix: use correct main branch name 'latest' in ci workflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,10 +2,10 @@ name: ci
 
 on:
     push:
-        branches: [main]
+        branches: [latest]
 
     pull_request:
-        branches: [main]
+        branches: [latest]
 
 jobs:
     build:
