--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,16 +1,31 @@
 name: ci
 
 on:
-    push:
-        branches: [latest]
+  push:
+    branches:
+      - latest
 
-    pull_request:
-        branches: [latest]
+  pull_request_target:
+    branches:
+      - latest
 
 jobs:
-    build:
-        runs-on: ubuntu-latest
-        steps:
-            - uses: actions/checkout@v4
-            - run: docker-compose pull --quiet
-            - run: make ci
+  build:
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        php:
+          - 8.1
+          - 8.2
+          - 8.3
+        dependencies:
+          - stable
+          - lowest
+    env:
+      PHP_VERSION: ${{ matrix.php }}
+      DEPENDENCY_VERSIONS: ${{ matrix.dependencies }}
+    steps:
+      - uses: actions/checkout@v4
+      - run: docker-compose pull --quiet
+      - run: make ci
