--- a/composer.json
+++ b/composer.json
@@ -1,33 +1,34 @@
 {
-    "name": "nayleen/codestandard",
-    "description": "Wraps my preferred PHPCSFixer config into a class for easier reuse.",
-    "license": "MIT",
-    "require": {
-        "php": ">=8.1"
-    },
-    "require-dev": {
-        "nayleen/development-dependencies": "^3",
-        "roave/security-advisories": "dev-latest"
-    },
-    "autoload": {
-        "psr-4": {
-            "Nayleen\\": "src/"
-        }
-    },
-    "autoload-dev": {
-        "psr-4": {
-            "Nayleen\\": "tests/"
-        }
-    },
-    "config": {
-        "allow-plugins": {
-            "ergebnis/composer-normalize": true,
-            "phpstan/extension-installer": true
-        },
-        "lock": false,
-        "preferred-install": {
-            "*": "dist"
-        },
-        "sort-packages": true
+  "name": "nayleen/codestandard",
+  "description": "Wraps my preferred PHPCSFixer config into a class for easier reuse.",
+  "license": "MIT",
+  "require": {
+    "php": ">=8.1",
+    "friendsofphp/php-cs-fixer": "^v3.38.2"
+  },
+  "require-dev": {
+    "nayleen/development-dependencies": "^3",
+    "roave/security-advisories": "dev-latest"
+  },
+  "autoload": {
+    "psr-4": {
+      "Nayleen\\": "src/"
     }
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "Nayleen\\": "tests/"
+    }
+  },
+  "config": {
+    "allow-plugins": {
+      "ergebnis/composer-normalize": true,
+      "phpstan/extension-installer": true
+    },
+    "lock": false,
+    "preferred-install": {
+      "*": "dist"
+    },
+    "sort-packages": true
+  }
 }
