--- a/composer.json
+++ b/composer.json
@@ -3,11 +3,10 @@
   "description": "Wraps my preferred PHPCSFixer config into a class for easier reuse.",
   "license": "MIT",
   "require": {
-    "php": ">=8.1",
-    "friendsofphp/php-cs-fixer": "^v3.38.2"
+    "php": ">=8.1"
   },
   "require-dev": {
-    "nayleen/development-dependencies": "^3",
+    "nayleen/development-dependencies": "3.3.x-dev",
     "roave/security-advisories": "dev-latest"
   },
   "autoload": {
