--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "php": ">=8.1"
   },
   "require-dev": {
-    "nayleen/development-dependencies": "3.3.x-dev",
+    "nayleen/development-dependencies": "^3.3",
     "roave/security-advisories": "dev-latest"
   },
   "autoload": {
